--- a/envoy-generic-proxy.yml
+++ b/envoy-generic-proxy.yml
@@ -1,50 +1,69 @@
 static_resources:
   listeners:
-  - name: listener_0
-    address:
-      socket_address: { address: 0.0.0.0, port_value: 8080 }
-
-    filter_chains:
-    - filters:
-      - name: envoy.http_connection_manager
-        config:
-          stat_prefix: ingress_http
-          route_config:
-            name: local_route
-            virtual_hosts:
-            - name: local_service
-              domains: ["*"]
-              routes:
-              - match: { prefix: "/"}
-                route: { cluster: http_default }
-          http_filters:
-          - name: envoy.router
-    use_original_dst: true
-  - name: listener_1
-    address:
-      socket_address: { address: 0.0.0.0, port_value: 8443 }
-
-    filter_chains:
-    - filters:
-      - name: envoy.tcp_proxy
-        config:
-          stat_prefix: ingress_https
-          cluster: tcp_default
-    use_original_dst: true
-
+    - name: listener_0
+      address:
+        socket_address:
+          protocol: TCP
+          address: 0.0.0.0
+          port_value: 8080
+      filter_chains:
+        - filters:
+            - name: envoy.filters.network.http_connection_manager
+              typed_config:
+                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+                stat_prefix: ingress_http
+                route_config:
+                  name: local_route
+                  virtual_hosts:
+                    - name: local_service
+                      domains: ["*"]
+                      routes:
+                        - match:
+                            prefix: "/force-host-rewrite"
+                          route:
+                            cluster: dynamic_forward_proxy_cluster
+                          typed_per_filter_config:
+                            envoy.filters.http.dynamic_forward_proxy:
+                              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
+                              host_rewrite_literal: www.example.org
+                        - match:
+                            prefix: "/"
+                          route:
+                            cluster: dynamic_forward_proxy_cluster
+                        - match:
+                            connect_matcher:
+                              {}
+                          route:
+                            cluster: dynamic_forward_proxy_cluster
+                            upgrade_configs:
+                              - upgrade_type: CONNECT
+                                connect_config:
+                                  {}
+                http_filters:
+                  - name: envoy.filters.http.dynamic_forward_proxy
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig
+                      dns_cache_config:
+                        name: dynamic_forward_proxy_cache_config
+                        dns_lookup_family: V4_ONLY
+                  - name: envoy.filters.http.router
+                    typed_config:
+                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
-  - name: http_default
-    connect_timeout: 6s
-    type: ORIGINAL_DST
-    lb_policy: ORIGINAL_DST_LB
-    dns_lookup_family: V4_ONLY
-  - name: tcp_default
-    connect_timeout: 6s
-    type: ORIGINAL_DST
-    lb_policy: ORIGINAL_DST_LB
-    dns_lookup_family: V4_ONLY
-
+    - name: dynamic_forward_proxy_cluster
+      connect_timeout: 1s
+      lb_policy: CLUSTER_PROVIDED
+      cluster_type:
+        name: envoy.clusters.dynamic_forward_proxy
+        typed_config:
+          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
+          dns_cache_config:
+            name: dynamic_forward_proxy_cache_config
+            dns_lookup_family: V4_ONLY
 admin:
   access_log_path: /tmp/admin_access.log
   address:
-    socket_address: { address: 0.0.0.0, port_value: 9901 }
+    socket_address:
+      protocol: TCP
+      address: 127.0.0.1
+      port_value: 9901
