--- a/envoy-generic-proxy.yml
+++ b/envoy-generic-proxy.yml
@@ -16,16 +16,9 @@ static_resources:
                   name: local_route
                   virtual_hosts:
                     - name: local_service
-                      domains: ["*"]
+                      # domains: ["*"] 
+                      domains: ["*.example.com:443", "*.example.com", "*.example.org:443", "*.example.org"]
                       routes:
-                        - match:
-                            prefix: "/force-host-rewrite"
-                          route:
-                            cluster: dynamic_forward_proxy_cluster
-                          typed_per_filter_config:
-                            envoy.filters.http.dynamic_forward_proxy:
-                              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
-                              host_rewrite_literal: www.example.org
                         - match:
                             prefix: "/"
                           route:
