Added support for CONNECT HTTP/1.0 used in py-38

--- a/envoy-generic-proxy.yml
+++ b/envoy-generic-proxy.yml
@@ -12,6 +12,8 @@ static_resources:
               typed_config:
                 "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                 stat_prefix: ingress_http
+                http_protocol_options:
+                  accept_http_10: true
                 route_config:
                   name: local_route
                   virtual_hosts:
